# shek-lib

./: LICENSE.txt  README.md  pyproject.toml
shek_lib/: __about__.py  __init__.py
shek_lib/.github/workflows/: python-package.yml
tests/: test_text.py
